--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>MUSIC LIFE</title>
 </head>
 <body>
-   <nav>
-    <h1>MUSIC LIFE</h1>
-   </nav>
+   <header>
+    <h1>MUSIC LIFE<span><sub>developed by Sean</sub></span></h1>
+   </header>
     
 </body>
 </html>
