Create the search form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
    <header>
     <h1>MUSIC LIFE<span><sub>developed by Sean</sub></span></h1>
    </header>
+   <div id="main-content">
+    <form action="" id="form">
+        <input type="text" id="search" placeholder="Artist's Name or Song Title">
+        <button>SEARCH</button>
+    </form>
+   </div>
     
 </body>
 </html>
