add images to the website

--- a/index.html
+++ b/index.html
@@ -14,10 +14,35 @@
    </header>
    <div id="main-content">
     <form action="" id="form">
-        <input type="text" id="search" placeholder="Artist's Name or Song Title">
+        <input type="text" id="search" placeholder="Enter the Artist's Name or the Song Title">
         <button>SEARCH</button>
     </form>
    </div>
+   <figure>
+        <div id="slider-images">
+            <div class="slides">
+                <p>Image I</p>
+                <img src="./assets/images/GirlListening.jpg" alt="Girl listening">
+            </div>
+            <div class="slides">
+                <p>Image II</p>
+                <img src="./assets/images/Writing-lyrics.jpg" alt="Note Down Lyrics">
+            </div>
+            <div class="slides">
+                <p>Image III</p>
+                <img src="./assets/images/Radio-Guy.jpg" alt="Listening to Music">
+            </div>
+            <div class="slides">
+                <p>Image IV</p>
+                <img src="./assets/images/Girl-and-Boy-listening.jpg" alt="Girl and Boy Listening">
+            </div>
+            <div class="slides">
+                <p>Image V</p>
+                <img src="./assets/images/Party-Rave.jpg" alt="Party">
+            </div>
+        </div>
+    </figure>
+
     
 </body>
 </html>
