create sliding images

--- a/index.html
+++ b/index.html
@@ -18,31 +18,29 @@
         <button>SEARCH</button>
     </form>
    </div>
-   <figure>
-        <div id="slider-images">
-            <div class="slides">
-                <p>Image I</p>
-                <img src="./assets/images/GirlListening.jpg" alt="Girl listening">
-            </div>
-            <div class="slides">
-                <p>Image II</p>
-                <img src="./assets/images/Writing-lyrics.jpg" alt="Note Down Lyrics">
-            </div>
-            <div class="slides">
-                <p>Image III</p>
-                <img src="./assets/images/Radio-Guy.jpg" alt="Listening to Music">
-            </div>
-            <div class="slides">
-                <p>Image IV</p>
-                <img src="./assets/images/Girl-and-Boy-listening.jpg" alt="Girl and Boy Listening">
-            </div>
-            <div class="slides">
-                <p>Image V</p>
-                <img src="./assets/images/Party-Rave.jpg" alt="Party">
-            </div>
+   <div id="slider-images">
+    <figure>
+        <div class="slides">
+            <p>Image I</p>
+            <img src="./assets/images/GirlListening.jpg" alt="Girl listening">
+        </div>
+        <div class="slides">
+            <p>Image II</p>
+            <img src="./assets/images/Writing-lyrics.jpg" alt="Note Down Lyrics">
+        </div>
+        <div class="slides">
+            <p>Image III</p>
+            <img src="./assets/images/Radio-Guy.jpg" alt="Listening to Music">
+        </div>
+        <div class="slides">
+            <p>Image IV</p>
+            <img src="./assets/images/girllistening.jpg" alt="Girl playing music">
+        </div>
+        <div class="slides">
+            <p>Image V</p>
+            <img src="./assets/images/Party-Rave.jpg" alt="Party">
         </div>
     </figure>
-
-    
+   </div>
 </body>
 </html>
