add background image

--- a/index.html
+++ b/index.html
@@ -12,35 +12,37 @@
    <header>
     <h1>MUSIC LIFE<span><sub>developed by Sean</sub></span></h1>
    </header>
-   <div id="main-content">
-    <form action="" id="form">
-        <input type="text" id="search" placeholder="Enter the Artist's Name or the Song Title">
-        <button>SEARCH</button>
-    </form>
-   </div>
-   <div id="slider-images">
-    <figure>
-        <div class="slides">
-            <p>Image I</p>
-            <img src="./assets/images/GirlListening.jpg" alt="Girl listening">
-        </div>
-        <div class="slides">
-            <p>Image II</p>
-            <img src="./assets/images/Writing-lyrics.jpg" alt="Note Down Lyrics">
-        </div>
-        <div class="slides">
-            <p>Image III</p>
-            <img src="./assets/images/Radio-Guy.jpg" alt="Listening to Music">
-        </div>
-        <div class="slides">
-            <p>Image IV</p>
-            <img src="./assets/images/girllistening.jpg" alt="Girl playing music">
-        </div>
-        <div class="slides">
-            <p>Image V</p>
-            <img src="./assets/images/Party-Rave.jpg" alt="Party">
-        </div>
-    </figure>
+   <div id="container">
+    <div id="main-content">
+        <form action="" id="form">
+            <input type="text" id="search" placeholder="Enter the Artist's Name or the Song Title">
+            <button>SEARCH</button>
+        </form>
+       </div>
+       <div id="slider-images">
+        <figure>
+            <div class="slides">
+                <p>Image I</p>
+                <img src="./assets/images/GirlListening.jpg" alt="Girl listening">
+            </div>
+            <div class="slides">
+                <p>Image II</p>
+                <img src="./assets/images/Writing-lyrics.jpg" alt="Note Down Lyrics">
+            </div>
+            <div class="slides">
+                <p>Image III</p>
+                <img src="./assets/images/Radio-Guy.jpg" alt="Listening to Music">
+            </div>
+            <div class="slides">
+                <p>Image IV</p>
+                <img src="./assets/images/girllistening.jpg" alt="Girl playing music">
+            </div>
+            <div class="slides">
+                <p>Image V</p>
+                <img src="./assets/images/Party-Rave.jpg" alt="Party">
+            </div>
+        </figure>
+       </div>
    </div>
 </body>
 </html>
