Add Images to the Website

--- a/index.html
+++ b/index.html
@@ -20,26 +20,29 @@
         </form>
        </div>
        <div id="slider-images">
+        <p>
+            <span>Music Life</span> Provides Annotations and Interpretation To Songs Thus Allowing Users To Search Lyrics For All Music Genres:
+        </p>
         <figure>
             <div class="slides">
-                <p>Image I</p>
-                <img src="./assets/images/GirlListening.jpg" alt="Girl listening">
+                <p>HIP HOP</p>
+                <img src="./assets/images/Drake.hipHopjpeg" alt="Drake">
             </div>
             <div class="slides">
-                <p>Image II</p>
-                <img src="./assets/images/Writing-lyrics.jpg" alt="Note Down Lyrics">
+                <p>POP MUSIC</p>
+                <img src="./assets/images/NewSchoolEllaMAi.jpeg" alt="EllaMai">
             </div>
             <div class="slides">
-                <p>Image III</p>
-                <img src="./assets/images/Radio-Guy.jpg" alt="Listening to Music">
+                <p>RNB</p>
+                <img src="./assets/images/ChrisBrownRNB.jpeg" alt="Breezy">
             </div>
             <div class="slides">
-                <p>Image IV</p>
-                <img src="./assets/images/girllistening.jpg" alt="Girl playing music">
+                <p>VOCALS</p>
+                <img src="assets/images/KehlaniVocaLS.jpeg" alt="KLani">
             </div>
             <div class="slides">
-                <p>Image V</p>
-                <img src="./assets/images/Party-Rave.jpg" alt="Party">
+                <p>TRAPSOUL</p>
+                <img src="./assets/images/BRYSON-TILLER-TrapSoul — png" alt="Tiller">
             </div>
         </figure>
        </div>
