Add Section where the Fetched Results Will Be Displayed

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
             </div>
         </figure>
        </div>
+       <section>
+        <h2>
+            RESULT LYRICS WILL BE DISPLAYED HERE:
+        </h2>
+       </section>
    </div>
+   <!-- <div>
+    <footer>
+
+    </footer>
+   </div> -->
 </body>
 </html>
