Add footer Section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <h2>
             RESULT LYRICS WILL BE DISPLAYED HERE:
         </h2>
+        <ul id="lyrics">
+            <li></li>
+        </ul>
        </section>
    </div>
    <!-- <div>
