--- a/index.html
+++ b/index.html
@@ -47,12 +47,9 @@
         </figure>
        </div>
        <section>
-        <h2>
+        <h2 id="result">
             RESULT LYRICS WILL BE DISPLAYED HERE:
         </h2>
-        <ul id="lyrics">
-            <li></li>
-        </ul>
        </section>
    </div>
    <!-- <div>
@@ -60,5 +57,6 @@
 
     </footer>
    </div> -->
+   <script src="index.js"></script>
 </body>
 </html>
