create div for more

--- a/index.html
+++ b/index.html
@@ -52,11 +52,7 @@
         </h2>
        </section>
    </div>
-   <!-- <div>
-    <footer>
-
-    </footer>
-   </div> -->
+   <div id="more"></div>
    <script src="./src/index.js"></script>
 </body>
 </html>
