Polish on the typo errors

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
        </section>
    </div>
    <div id="more"></div>
+   <div id="footer">
+    
+   </div>
    <script src="./src/index.js"></script>
 </body>
 </html>
