--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             RESULT LYRICS WILL BE DISPLAYED HERE:
         </h2>
        </section>
-   </div>
-   <div id="more"></div>
-   <div id="footer">
-    
+       <div id="more"></div>
+       <div id="footer">
+        <h2>Music Life is created<br> to offer you the lyrics of your favorite songs.</h2>
+       </div>
    </div>
    <script src="./src/index.js"></script>
 </body>
