add feedback form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    </header>
    <div id="container">
     <div id="main-content">
-        <form action="" id="form">
+        <form action="#" id="form">
             <input type="text" id="search" placeholder="Enter the Artist's Name or the Song Title">
             <button>SEARCH</button>
         </form>
@@ -51,10 +51,18 @@
             RESULT LYRICS WILL BE DISPLAYED HERE:
         </h2>
        </section>
-       <div id="more"></div>
+       <div id="more"></div> 
        <div id="footer">
-        <h2>Music Life is created<br> to offer you the lyrics of your favorite songs.</h2>
-       </div>
+        <form action="#" id="feedback">
+            <input type="text" placeholder="Leave Us Your Feedback">
+            <button>Add Comment</button>
+        </form>
+        <h2><span>Music Life</span><br>offers you the lyrics to your favorite songs.</h2>
+        <ul>
+            <li></li>
+        </ul>
+        </div>
+       </div> 
    </div>
    <script src="./src/index.js"></script>
 </body>
