--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
         </div>
        </div> 
    </div>
-   <script src="./src/index.js"></script>
+   <script src="./src/main.js"></script>
 </body>
 </html>
