--- a/index.html
+++ b/index.html
@@ -65,5 +65,6 @@
        </div> 
    </div>
    <script src="./src/main.js"></script>
+   <script src="./src/comment.js"></script>
 </body>
 </html>
