Create Feedback Form and Footer Section

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         </p>
         <figure>
             <div class="slides">
-                <p>HIP HOP</p>
+                <!-- <p>HIP HOP</p> -->
                 <img src="./assets/images/Drake.hipHopjpeg" alt="Drake">
             </div>
             <div class="slides">
-                <p>POP MUSIC</p>
+                <!-- <p>POP MUSIC</p> -->
                 <img src="./assets/images/NewSchoolEllaMAi.jpeg" alt="EllaMai">
             </div>
             <div class="slides">
-                <p>RNB</p>
+                <!-- <p>RNB</p> -->
                 <img src="./assets/images/ChrisBrownRNB.jpeg" alt="Breezy">
             </div>
             <div class="slides">
-                <p>VOCALS</p>
+                <!-- <p>VOCALS</p> -->
                 <img src="assets/images/KehlaniVocaLS.jpeg" alt="KLani">
             </div>
             <div class="slides">
-                <p>TRAPSOUL</p>
+                <!-- <p>TRAPSOUL</p> -->
                 <img src="./assets/images/BRYSON-TILLER-TrapSoul — png" alt="Tiller">
             </div>
         </figure>
@@ -52,18 +52,35 @@
         </h2>
        </section>
        <div id="more"></div> 
-       <div id="footer">
-        <form action="#" id="feedback">
-            <input type="text" placeholder="Leave Us Your Feedback">
-            <button>Add Comment</button>
-        </form>
-        <h2><span>Music Life</span><br>offers you the lyrics to your favorite songs.</h2>
-        <ul>
+       </div>
+       <div id="feedback-section">
+        <h2>
+            <span>
+                Music Life
+            </span><br>Offers You Lyrics To Your Favorite Songs
+        </h2>
+        <h3>
+            Feedback and Reviews
+        </h3>
+        <ul id="feedback-list">
+            <!-- <li>Feedback Appears Here</li> -->
             <li></li>
         </ul>
+            <form action="#" id="feedback-form">
+                <input type="text" placeholder="Leave Us Your Feedback">
+                <button>Add Comment</button>
+            </form>/
         </div>
-       </div> 
-   </div>
+       <div id="footer">
+        <h5>
+            ⒸMusic Life
+        </h5>
+        <ul id="follow">
+            <li>Instagram</li>
+            <li>Twitter</li>
+            <li>Github</li>
+        </ul>
+       </div>
    <script src="./src/main.js"></script>
    <script src="./src/comment.js"></script>
 </body>
