--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <form action="#" id="feedback-form">
                 <input type="text" placeholder="Leave Us Your Feedback">
                 <button>Add Comment</button>
-            </form>/
+            </form>
         </div>
        <div id="footer">
         <h5>
-            ⒸMusic Life
+            ⒸMusic Life 2022
         </h5>
         <ul id="follow">
             <li>Instagram</li>
