--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
             <form action="#" id="feedback-form">
                 <input type="text" placeholder="Leave Us Your Feedback">
-                <button>Add Comment</button>
+                <button type="submit">Add Review</button>
             </form>
         </div>
        <div id="footer">
@@ -76,6 +76,7 @@
             ⒸMusic Life 2022
         </h5>
         <ul id="follow">
+            <li>Email</li>
             <li>Instagram</li>
             <li>Twitter</li>
             <li>Github</li>
