Create a local server

--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
             Feedback and Reviews
         </h3>
         <ul id="feedback-list">
-            <!-- <li>Feedback Appears Here</li> -->
+            <li>--Feedback Appears Here--</li>
             <li></li>
         </ul>
             <form action="#" id="feedback-form">
                 <input type="text" placeholder="Leave Us Your Feedback">
+                <label for="feedback"></label>
                 <button type="submit">Add Review</button>
             </form>
         </div>
