--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         </p>
         <figure>
             <div class="slides">
-                <!-- <p>HIP HOP</p> -->
+                <p>HIP HOP</p>
                 <img src="./assets/images/Drake.hipHopjpeg" alt="Drake">
             </div>
             <div class="slides">
-                <!-- <p>POP MUSIC</p> -->
+                <p>POP MUSIC</p>
                 <img src="./assets/images/NewSchoolEllaMAi.jpeg" alt="EllaMai">
             </div>
             <div class="slides">
-                <!-- <p>RNB</p> -->
+                <p>RNB</p>
                 <img src="./assets/images/ChrisBrownRNB.jpeg" alt="Breezy">
             </div>
             <div class="slides">
-                <!-- <p>VOCALS</p> -->
+                <p>VOCALS</p>
                 <img src="assets/images/KehlaniVocaLS.jpeg" alt="KLani">
             </div>
             <div class="slides">
-                <!-- <p>TRAPSOUL</p> -->
+                <p>TRAPSOUL</p>
                 <img src="./assets/images/BRYSON-TILLER-TrapSoul — png" alt="Tiller">
             </div>
         </figure>
@@ -67,7 +67,8 @@
             <li></li>
         </ul>
             <form action="#" id="feedback-form">
-                <input type="text" placeholder="Leave Us Your Feedback">
+                <input type="text" placeholder="Enter Your Name" id="input-name">
+                <input type="text" placeholder="Leave Us Your Review" id="input-review">
                 <label for="feedback"></label>
                 <button type="submit">Add Review</button>
             </form>
