Remove redundant code

--- a/index.html
+++ b/index.html
@@ -66,10 +66,9 @@
             <li></li>
         </ul>
             <form action="#" id="feedback-form">
-                <input type="text" placeholder="Enter Your Name" id="input-name">
-                <input type="text" placeholder="Leave Us Your Review" id="input-review">
+                <input type="text" placeholder="Leave Us Your Review..." id="input-review">
                 <label for="feedback"></label>
-                <button type="submit">Add Review</button>
+                <button type="submit">Send Review</button>
             </form>
         </div>
        <div id="footer">
