add the text area

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <li></li>
         </ul>
             <form action="#" id="feedback-form">
-                <input type="text" placeholder="Leave Us Your Review..." id="input-review">
-                <label for="feedback"></label>
+                <textarea id="feedback" placeholder="Kindly Leave Me Your Review..."></textarea>
+                <label for="feedback" ></label>
                 <button type="submit">Send Review</button>
             </form>
         </div>
