Remove Unnecessary Indentations

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <div id="container">
     <div id="main-content">
         <form action="#" id="form">
-            <input type="text" id="search" placeholder="Enter the Artist's Name or the Song Title">
+            <input type="text" id="search" placeholder="Enter the Artist's Name or the Song Title...">
             <button>SEARCH</button>
         </form>
        </div>
@@ -25,23 +25,43 @@
         </p>
         <figure>
             <div class="slides">
-                <p>HIP HOP</p>
+                <p>
+                    <strong>
+                        HIP HOP
+                    </strong>
+                </p>
                 <img src="./assets/images/Drake.hipHopjpeg" alt="Drake">
             </div>
             <div class="slides">
-                <p>POP MUSIC</p>
+                <p>
+                    <strong>
+                        POP 
+                    </strong>
+                </p>
                 <img src="./assets/images/NewSchoolEllaMAi.jpeg" alt="EllaMai">
             </div>
             <div class="slides">
-                <p>RNB</p>
+                <p>
+                    <strong>
+                       R 'N' B
+                    </strong>
+                </p>
                 <img src="./assets/images/ChrisBrownRNB.jpeg" alt="Breezy">
             </div>
             <div class="slides">
-                <p>VOCALS</p>
+                <p>
+                    <strong>
+                        VOCALS
+                    </strong>
+                </p>
                 <img src="assets/images/KehlaniVocaLS.jpeg" alt="KLani">
             </div>
             <div class="slides">
-                <p>TRAPSOUL</p>
+                <p>
+                    <strong>
+                        TRAPSOUL
+                    </strong>
+                </p>
                 <img src="./assets/images/BRYSON-TILLER-TrapSoul — png" alt="Tiller">
             </div>
         </figure>
@@ -66,7 +86,7 @@
             <li></li>
         </ul>
             <form action="#" id="feedback-form">
-                <textarea id="feedback" placeholder="Kindly Leave Me Your Review..."></textarea>
+                <textarea id="feedback" placeholder="Kindly Enter Your Review..."></textarea>
                 <label for="feedback" ></label>
                 <button type="submit">Send Review</button>
             </form>
