--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         TRAPSOUL
                     </strong>
                 </p>
-                <img src="./assets/images/BRYSON-TILLER-TrapSoul — png" alt="Tiller">
+                <img src="./assets/images/BRYSON-TILLER-TrapSoul.png" alt="Tiller">
             </div>
         </figure>
        </div>
@@ -96,10 +96,36 @@
             ⒸMusic Life 2022
         </h5>
         <ul id="follow">
-            <li>Email</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
-            <li>Github</li>
+            <li>
+                <img src="./assets/images/mail.svg" alt="email-icon">
+                <p>
+                    Email
+                </p>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/itsinstagram.com/its_ngangasean_ngangasean">
+                    <img src="./assets/images/instagram.svg" alt="instagram-icon">
+                </a>
+                <p>
+                    Instagram
+                </p>
+            </li>
+            <li>
+                <a href="twitter.com/nganga_sea">
+                    <img src="./assets/images/twitter.svg" alt="twitter-icon">
+                </a>
+                <p>
+                    Twitter
+                </p>
+            </li>
+            <li>
+                <a href="https://github.com/sean-code">
+                    <img src="./assets/images/github.svg" alt="github-icon">
+                </a>
+                <p>
+                    Github
+                </p>
+            </li>
         </ul>
        </div>
    <script src="./src/main.js"></script>
