Edit the order of the footer constituents

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             </form>
         </div>
        <div id="footer">
-        <h5>
-            ⒸMusic Life 2022
-        </h5>
+        <h2>
+            Follow Me
+        </h2>
         <ul id="follow">
             <li>
                 <img src="./assets/images/mail.svg" alt="email-icon">
@@ -103,7 +103,7 @@
                 </p>
             </li>
             <li>
-                <a href="https://www.instagram.com/itsinstagram.com/its_ngangasean_ngangasean">
+                <a href="https://www.instagram.com/its_ngangasean" target="_blank">
                     <img src="./assets/images/instagram.svg" alt="instagram-icon">
                 </a>
                 <p>
@@ -111,7 +111,7 @@
                 </p>
             </li>
             <li>
-                <a href="twitter.com/nganga_sea">
+                <a href="https://twitter.com/nganga_sea" target="_blank">
                     <img src="./assets/images/twitter.svg" alt="twitter-icon">
                 </a>
                 <p>
@@ -119,7 +119,7 @@
                 </p>
             </li>
             <li>
-                <a href="https://github.com/sean-code">
+                <a href="https://github.com/sean-code" target="_blank">
                     <img src="./assets/images/github.svg" alt="github-icon">
                 </a>
                 <p>
@@ -127,6 +127,9 @@
                 </p>
             </li>
         </ul>
+        <h5>
+            ⒸMusic Life 2022
+        </h5>
        </div>
    <script src="./src/main.js"></script>
    <script src="./src/comment.js"></script>
