--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </li>
         </ul>
         <h5>
-            ⒸMusic Life 2022
+            ⒸMusic Life, 2022
         </h5>
        </div>
    <script src="./src/main.js"></script>
